# ComfyUI-FlashVSR_Ultra_Fast

./: README.md  README_zh.md  nodes.py  pyproject.toml  requirements.txt
src/FlashVSR/models/: utils.py  wan_video_dit.py
src/diffsynth/pipelines/: flashvsr_full.py  flashvsr_tiny.py
src/models/: wan_video_dit.py
src/pipelines/: flashvsr_full.py  flashvsr_full_long.py  flashvsr_tiny.py  flashvsr_tiny_long.py
